# gfx

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.cmake  main.cpp  model_obj.cpp
src/: CMakeLists.txt  DX12Interface.h  Gfx.cpp  Gfx.h
src/DX12/: CMakeLists.txt  DX12InterfaceImpl.h  Gfx.cpp
